<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never" />

    <item
        android:id="@+id/calorie_counter"
        android:orderInCategory="100"
        android:title="@string/add_food"
        app:showAsAction="never"/>

    <item
        android:id="@+id/food"
        android:orderInCategory="100"
        android:title="@string/add_activity"
        app:showAsAction="never"/>

    <item
        android:id="@+id/activities"
        android:orderInCategory="100"
        android:title="@string/day_breakdown"
        app:showAsAction="never"/>

    <item
        android:id="@+id/records"
        android:orderInCategory="100"
        android:title="@string/records"
        app:showAsAction="never"/>

    <item
        android:id="@+id/resources"
        android:orderInCategory="100"
        android:title="@string/resources"
        app:showAsAction="never"/>

    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="never"/>
</menu>
